--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ var map = new mapboxgl.Map({
 mapboxgl.accessToken = 'pk.eyJ1IjoiY3Bhd3Njb2IiLCJhIjoiY2psMm5oMXJvMDB3ajNwcTgxcHpuNW43byJ9.nW2vN-yZs3nOI3dhOEzeOQ';
 var map = new mapboxgl.Map({
     container: 'map', // container id
-    style: 'mapbox://styles/mapbox/streets-v9', // stylesheet location
-    center: [-74.50, 40], // starting position [lng, lat]
+    style: 'mapbox://styles/cpawscob/cjl2od96p587v2sqpzhupba4r', // stylesheet location
+    center: [-73.65234375, 45.508271755944975], // starting position [lng, lat]
     zoom: 9 // starting zoom
 });
     
